--- a/src/components/Auth-Form.module.css
+++ b/src/components/Auth-Form.module.css
@@ -36,13 +36,17 @@
 }
 
 .heading {
-  font-size: 3rem;
+  font-size: 2.7rem;
   color: rgb(0, 193, 0);
 }
 
 .toogle {
   color: white;
   margin-top: 2rem;
+}
+.toogle span {
+  color: rgb(0, 193, 0);
+  cursor: pointer;
 }
 
 .form input[type="submit"] {
@@ -55,4 +59,8 @@
   font-size: medium;
   font-weight: 700;
   margin-top: 2.6rem;
+  cursor: pointer;
+}
+.form input[type="submit"]:hover {
+  scale: 110%;
 }
