--- a/src/ui/Details.module.css
+++ b/src/ui/Details.module.css
@@ -1,14 +1,14 @@
 .image {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-  flex-basis: 40%;
+  flex-basis: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .image img {
-  height: 85%;
+  height: 75%;
   width: 85%;
 }
 
@@ -20,14 +20,14 @@
   margin-bottom: 4rem;
   color: rgb(0, 193, 0);
   margin-top: 4rem;
-  border-bottom: 2px solid black;
+  border-bottom: 4px solid rgba(0, 0, 0, 0.516);
   padding-bottom: 4rem;
 }
 
 .subHeading {
   font-size: 2rem;
   font-weight: bolder;
-  color: rgb(59, 59, 59);
+  color: rgba(59, 59, 59, 0.749);
   text-transform: uppercase;
   margin-left: 4rem;
   margin-bottom: 2rem;
@@ -35,13 +35,13 @@
 
 .wrapper {
   display: flex;
-  height: 18rem;
+  height: 23rem;
   margin-left: 4rem;
   margin-bottom: 4rem;
 }
 
 .itemsContainer {
-  flex-basis: 60%;
+  flex-basis: 50%;
 }
 
 .list {
@@ -54,12 +54,12 @@
   font-size: 1rem;
   margin-right: 4rem;
   font-weight: 600;
-  margin-bottom: 0.5rem;
-  color: rgb(97, 97, 97);
+
+  color: rgba(97, 97, 97, 0.756);
 }
 
 .instructions {
-  color: rgb(111, 111, 111);
+  color: rgba(111, 111, 111, 0.668);
   font-size: 1rem;
   margin: 2rem 4rem;
   font-weight: 500;
