--- a/src/ui/Dishes.module.css
+++ b/src/ui/Dishes.module.css
@@ -1,17 +1,16 @@
 .wrapper {
   width: 50%;
-  height: 10rem;
+  height: 15rem;
 
   margin: auto;
   border-radius: 1.5rem;
   margin-top: 2rem;
   margin-bottom: 3rem;
+  text-decoration: none;
 
   cursor: pointer;
 
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
 
   transition: 0.5s ease-in;
 
@@ -25,25 +24,42 @@
 }
 
 .container {
-  height: 100%;
+  flex-basis: 50%;
 }
 
 .image {
-  object-fit: contain;
-
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   border-radius: 1.5rem 0 0 1.5rem;
 }
 
 .heading {
   color: rgb(0, 193, 0);
-  font-size: 1.4rem;
-  margin: auto;
+
+  font-size: 1.3rem;
+  margin: 2rem;
 
   font-weight: bolder;
 }
+.paraWrapper {
+  width: 100%;
+  height: 4rem;
+  overflow: hidden;
+}
+
+.instruction {
+  color: rgba(73, 73, 73, 0.427);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin: 2rem;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3; /* start showing ellipsis when 3rd line is reached */
+  white-space: pre-wrap;
+}
 
 .box {
-  margin-right: 4rem;
-  margin-left: 6rem;
+  flex-basis: 50%;
+  margin: auto;
 }
